--- a/myversion.tex
+++ b/myversion.tex
@@ -1,5 +1,6 @@
 \documentclass{patmorin}
 \usepackage{pat}
+\usepackage{graphicx}
 
 \DeclareMathOperator{\exponential}{exponential}
 
@@ -7,31 +8,38 @@
 \section{Inequalities for Sums of Exponentials}
 
 We will make use of two inequalities on sums of exponential random
-variables, both of which can be obtained using Chernoff's bounding method.
-If $Z_1,\ldots,Z_k$ are independent exponential random variables, each
-with mean $\lambda=1$, then for all $d>1$,
+variables, both of which can be obtained using Chernoff's bounding
+method.  If $Z_1,\ldots,Z_k$ are independent $\exponential(\lambda)$
+random variables (so that they each have mean $\mu=1/\lambda$), then
+for all $d>1$,
+
 \begin{equation}
-    \Pr\left\{\sum_{i=1}^k Z_i \le k/d\right\} \le \exp(-k(\ln d -1 + 1/d)) \le \left(\frac{e}{d}\right)^k  \eqlabel{head-bound}
+    \Pr\left\{\sum_{i=1}^k Z_i \le \mu k/d\right\} \le \exp(-k(\ln d -1 + 1/d)) \le \left(\frac{e}{d}\right)^k  \eqlabel{head-bound}
 \end{equation}
 and for all $t>1$, 
 \begin{equation}
-    \Pr\left\{\sum_{i=1}^n Z_i \ge tk\right\} \le \exp (k- k t/2) \enspace . \eqlabel{tail-bound}
+    \Pr\left\{\sum_{i=1}^n Z_i \ge \mu k t\right\} \le \exp (k-kt/2) \enspace . \eqlabel{tail-bound}
 \end{equation}
+
 
 
 \section{The Exponential Process (First Passage Percolation)}
 
 Consider the following process for growing a spanning tree, $T$, of an
 $n$-vertex connected undirected graph $G$ starting from a distinguished
-vertex $s\in V(G)$.  On each edge of $G$ we attach an exponential timer
-with rate 1. When the timer on an edge $vw$ rings the timer is immediately
+vertex $s\in V(G)$:  On each edge of $G$ we attach an $\exponential(1)$
+timer.  When the timer on an edge $vw$ rings the timer is immediately
 reset and, if exactly one of $v$ or $w$ is in $T$, then the edge $vw$
 is added to $T$.  We call this \emph{Process~E} and we say that Process~E
-is \emph{complete} once $T$ spans $G$.  Note that Process~E is equivalent to selecting an exponential(1) edge weight for each edge of $G$ and then computing the shortest path tree rooted at $s$.  We call this latter process Process~FP, for first-passage percolation.
+is \emph{complete} once $T$ spans $G$.  Note that, by the memorylessness
+of exponential random variables, Process~E is equivalent to selecting
+an exponential(1) edge weight for each edge of $G$ and then computing
+the shortest path tree rooted at $s$.  We call this latter process
+\emph{Process~FP} (for first-passage percolation).
 
 \begin{lem}\lemlabel{percolation}
   If $G$ has diameter $D$ then, with probability at least $1-1/n$, $T$
-  is a spanning tree after time at most $c(D+\log n)$.
+  is a spanning tree after time at most $((4\log n)/D+2)D$.
 \end{lem}
 
 
@@ -47,17 +55,21 @@ is \emph{complete} once $T$ spans $G$.  Note that Process~E is equivalent to sel
   By the memoryless property of exponentials, this next ring occurs at
   time $t_i+Z_i$ where $Z_i$ is a an exponential random variable with
   rate 1.  Therefore, the random variable $t_k$ is dominated by the sum
-  of $k$ independent exponentials $Z_1,\ldots,Z_k$.
-  In particular, using \eqref{tail-bound},
-  \[
-      \Pr\{t_k\ge c(k+\log n)\} \le \Pr\{Z_1+\cdots Z_k\ge c(k+\log n)\} \le 1/n^2 \enspace .
-  \]
+  of $k$ independent exponentials $Z_1,\ldots,Z_k$.  Therefore,
+  \begin{align*}
+      \Pr\left\{t_k\ge \left(\frac{4\log n}{k}+2\right)k\right\} 
+        & \le \Pr\left\{Z_1+\cdots Z_k\ge \left(\frac{4\log n}{k}+2\right)k\right\} \\ 
+        & \le \exp\left(k - \left(\frac{4\log n}{k}+2\right)k/2\right) 
+            & \text{using \eqref{tail-bound}} \\
+      & = 1/n^2 \enspace .
+  \end{align*}
   For each $v\in V(G)$, let $t(v)$ denote the time at which $v$ joins
   the tree $T$ and define $t=\max\{t(v):v\in V(G)\}$
   as the time at which the last vertex of $G$ joins 
-  $T$.  Then,
+  $T$.  For each vertex $v$, $G$ contains a path from $s$ to $v$ of length
+  at most $D$, so
   \[
-      \Pr\{t> c(D+\log n)\} \le \sum_{v\in V(G)}\Pr\{t(v) \ge c(D+\log n)     
+      \Pr\{t> ((4\log n/D)+2)D\} \le \sum_{v\in V(G)}\Pr\{t(v) \ge ((4\log n/D)+2)D\}     
        \le 1/n \enspace . \qedhere
   \]
 \end{proof}
@@ -76,11 +88,11 @@ Process~E is equally likely to be the next timer to ring.
 
 \subsection{The Upper Bound}
 
-\begin{lem}\lemlabel{alantree-upper-bound}
+\begin{thm}\thmlabel{alantree-upper-bound}
   If $G$ has diameter $D$ and maximum degree $\Delta$ then after running
   Process~B to completion, with probability at least $1-O(1/n)$, the spanning
-  tree $T$ has diameter at most $2c\Delta(D+\log n)$.
-\end{lem}
+  tree $T$ has diameter at most $2\Delta e(4\log n/D)+2)D$.
+\end{thm}
 
 \begin{proof}
   Let $P=v_0,v_1,\ldots,v_L$ be some simple path in $G$ starting at
@@ -93,38 +105,82 @@ Process~E is equally likely to be the next timer to ring.
   \[
       \Pr\{t_L\} \le L/d \le \left(\frac{e}{d}\right)^L \enspace .
   \]
-  If $P$ appears in $T$, then either $t_L < c(D+\log n)$ or $T$ is not
-  yet a spanning tree of $G$ at time $c(D+\log n)$.  
+  If $P$ appears in $T$, then either $t_L < ((4\log n/D)+2)D$ or $T$ is not
+  yet a spanning tree of $G$ at time $((4\log n/D)+2)D$.  
   Therefore by the preceding discussion and \lemref{percolation}, 
   \[
       \Pr\{\text{$P$ appears in $T$}\} \le 1/n 
-        + \left(\frac{ec(D+\log n)}{L}\right)^L \enspace .
+        + \left(\frac{e((4\log n/D)+2)D}{L}\right)^L \enspace .
   \]
   Let $P_L$ be the set of all simple paths in $G$ that start at $s$ and have length $L$.  The probability that $T$ contains any path from $P_L$ is at most
   \[
-      1/n + |P_L|\left(\frac{\Delta ec(D+\log n)}{L}\right)^L 
-      < 1/n + \left(\frac{\Delta ec(D+\log n)}{L}\right)^L \enspace ,
+      1/n + |P_L|\left(\frac{e((4\log n/D)+2)D}{L}\right)^L 
+      < 1/n + \left(\frac{\Delta e((4\log n/D)+2)D}{L}\right)^L \enspace ,
   \]
   since $|P_L|\le \Delta^L$.
   Finally, the probability that $T$ contains any path of length at least
-  $L'=2\Delta ec(D+\log n)$ is at most
+  $L'=2\Delta e(4\log n/D)+2)D$ is at most
   \[
      \frac{1}{n}+\sum_{L=L'}^{n-1} \left(\frac{\Delta ec(D+\log n)}{L}\right)^L <  \frac{1}{n}+\sum_{L=L'}^{n-1} (1/2)^L < 2/n \enspace . \qedhere
   \]
 \end{proof}
 
 
+
 \subsection{The Lower Bound}
 
-We will construct a graph, $G$, of diameter $D$ and maximum degree
-$\Delta$ for which the upper bound in \thmref{X} is tight.  This graph is
-obtained by gluing together two graphs $H$ and $I$. We begin by studing
-them independently.
+Note that \thmref{alantree-upper-bound} is obviously asymptotically
+tight for graph with maximum degree $\Delta\in O(1)$ and diameter
+$D\in\Omega(\log n)$.  For instance, \thmref{alantree-upper-bound}
+shows that, for constant $d$, running Process~B on a $n^{1/d}\times
+\cdots\times n^{1/d}$ grid or toroidal grid produces a
+spanning tree of diameter $\Theta(n^{1/d})$.
+
+However, \thmref{alantree-upper-bound} is not tight for some graphs, like
+the $d$-dimensional hypercube, which has $n=2^d$ vertices, maximum degree
+$\Delta = d/2 \in \Theta(\log n)$ and diameter $D=d\in\Theta(\log n)$.
+In this setting, a different argument shows that Process~B produces a
+spanning tree of diameter $\Theta(\log n)$ rather than the $O(\log^2 n)$
+bound given by \thmref{alantree-upper-bound}.
+
+Thus, makes it natural to wonder if one can eliminate or reduce the
+dependence on $\Delta$ in \thmref{alantree-upper-bound}.  Intuitively,
+higher degree should produce spanning trees of lower diameter.  However,
+the example of a sequence of $D/2$ $(\Delta-1)$-cliques joined in sequence
+(see \figref{clique-path}) shows that Process~B may produce spanning
+trees of diameter $\Omega(D\log\Delta)$.  Therefore, the dependence on
+$\Delta$ can not be eliminated entirely.
+
+\begin{figure}
+  \begin{center}
+    \includegraphics{clique-path}
+  \end{center}
+  \caption{A sequence of $D/2$ $(\Delta-1)$-cliques gives a graph $G$
+   with diameter $D$ and maximum degree $\Delta$ for which Process~B
+   produces a spannning tree of height $\Omega(D\log\Delta)$.}
+  \figlabel{clique-path}
+\end{figure}
+
+Here we show that, for any $\Delta$ and any $D\in\Omega(\log^2\Delta)$,
+we can construct a graph $G=G_{D,\Delta}$ of diameter $D$ and maximum
+degree $\Delta$ for which Process~B produces a spanning tree of diameter
+$\Omega(\Delta D)$.  Thus, the upper-bound \thmref{alantree-upper-bound}
+is tight for these graphs.  
+
+The graph $G$ is obtained by gluing together two graphs $H$ and $I$.
+The graph $G$ has high diameter and high connectivity.  The graph $I$
+has low connectivity and low diameter.  By joining them we obtain a graph
+of low diameter (because of $I$) but for which Process~B is more likely
+to find paths in $H$ (because of its high connectivity).  We begin by
+defining any studying $H$ and $I$ independently.
+
+
+\subsection{The Ladder Graph $H$}
 
 Fix some integers $L,\delta\in\N$ to be described later.  Refer to
 \figref{h}.  The graph $H$ has a special vertex $s$ and $L$ groups of
-vertices $V_1,\ldots,V_L$, each containing $\delta$ vertices.  Thus,
-the vertex set of $H$ is has vertex set
+vertices $V_1,\ldots,V_L$, each containing $\delta$ vertices.  The graph 
+$H$ has vertex set
 \[
    V(H) = \{s\}\cup\bigcup_{i=1}^L V_i
 \]
@@ -134,43 +190,56 @@ and edge set
        \cup \{vw : v\in V_{i},\, w\in V_{i+1}\} \enspace .
 \]
 \begin{figure}
-   \caption{The graph $H$.}
+  \begin{center}
+    \includegraphics{h} 
+  \end{center}
+  \caption{The graph $H$.}
+  \figlabel{h}
 \end{figure}
 
-\begin{lem}
-   Assign an independent $\exponential(1)$ weight to each edge of $H$;
-   for each $v,w\in V(H)$, define $d(v,w)$ as the weight of the shortest path from $v$
-   to $w$ in the resulting weighted graph.  Then, for any $1\le i<
-   j\le L$, any $v\in V_i$ and any $w\in V_j$,
+First we show that $H$, under the models of Process~E and Process~FP
+has very low-weight paths between its vertices.
+
+\begin{lem}\lemlabel{lightning}
+   Fix some vertex $v\in V_i$ and $w\in V_j$, $j>i$, and assign an
+   independent $\exponential(1)$ weight to each edge of $H$.  Let $d(v,w)$
+   denote the weight of the minimum weight path from $v$ to $w$ in the
+   resulting weighted graph.  Then,
    \[
-       \Pr\{d(v,w) > (1+c)((j-i-1)/\delta + 1) \} \le
-         \exp(-c(j-i-1)/2) + \exp(-(1+c)) \enspace .
+       \Pr\{d(v,w) > t(j-i-1)/\delta + r) \} \le
+         \exp(-(t-1)(j-i-1)/2) + \exp(-r) \enspace .
    \]
 \end{lem}
 
 \begin{proof}
-   Consider the following greedy algorithm for finding a path from $v\in V_i$
-   to $w\in V_j$: When the path has reached some vertex $x\in V_{k}$, for
+   Consider the following greedy algorithm for finding a path from $v$
+   to $w$: When the path has reached some vertex $x\in V_{k}$, for
    $k<j-1$, the algorithm extends the path by taking the minimum weight
    edge between $x$ and some vertex in $V_{k+1}$.  When the algorithm
    reaches some $x\in V_{j-1}$, it takes the edge $xw$.
 
    Let $m=j-i$.
    Each of the first $m-1$ edges in the resulting path has a
-   weight that is the minimum of $delta$ $\exponential(1)$ random
+   weight that is the minimum of $\delta$ $\exponential(1)$ random
    variables.  Thus, the weight of these edges is the sum of $m-1$
-   $\exponential(1/\delta)$ random variables $X_1,\ldots,X_{m-1}$.  
+   $\exponential(\delta)$ random variables $X_1,\ldots,X_{m-1}$.  
    By \eqref{tail-bound}, 
-   \[
-     \Pr\{\sum_{\ell=1}^{m-1} X_\ell \ge (1+c)(m-1) \} \le 
-        \exp(-c(m-1)/2) \enspace .
-   \]
-   The last edge in this path has a weight $X_m$ that is an $\exponential(1)$
-   random variable.  Therefore
-   \[
-      \Pr\{X_m > (1+c)\} \le \exp(-(1+c)) \enspace .
-   \]
+   \begin{equation}
+     \Pr\left\{\sum_{\ell=1}^{m-1} X_\ell > t(m-1)/\delta \right\} \le 
+        \exp(-(t-1)(m-1)/2) \enspace .  \eqlabel{part-i}
+   \end{equation}
+   The last edge in this path has a weight $X_m$ that is an
+   $\exponential(1)$ random variable.  From the definition
+   of the exponential distribution,
+   \begin{equation}
+      \Pr\{X_m > r\} = \exp(-r)) \enspace . \eqlabel{part-ii}
+   \end{equation}
+   If $\sum_{\ell=1}^{m-1} X_\ell \le t(m-1)/\delta$ and $X_m \le r$, then
+   $d(v,w)\le t(j-i-1)/\delta + r$, so we complete the proof by 
+   applying the union bound to \eqref{part-i} and \eqref{part-ii}.
 \end{proof}
+
+\subsection{The Subdivided Tree $I$}
 
 Next, we consider a graph $I$ that is a binary tree with $L$ leaves,
 where $L$ is a power of 2.  We can think of $I$ as a complete binary tree
@@ -180,24 +249,98 @@ to $v$'s children
 \[
    s(h) = a\cdot\max\{2^h/\delta,\log L\} 
 \]
-times so that each edge becomes a path of length $s(h)$.  The resulting
+times so that each edge becomes a path of length $s(h)$.  Here $a$ is a
+(sufficiently large) constant that is discussed later.  The resulting
 tree has $L$ leaves, $L-1$ degree 3 nodes, and the remaining nodes are
 degree 2 nodes.  The height of this tree is
 \[
-   a\cdot\sum_{h=0}^{log L} \max\{\log L, 2^h/\delta\}
+   a\cdot\sum_{h=0}^{\log L} \max\{\log L, 2^h/\delta\}
      = O( (\log\delta+\log\log L)\log L + L/\delta ) \enspace .
 \]
-\begin{lem}
+
+
+\begin{lem}\lemlabel{slow-train}
    Assign $\exponential(1)$ independent edge weights to each of the edges
    of $I$, and let $v$ and $w$ be two leaves of $I$ such that the path from $u$ to $w$ visits $2h+1$ degree 3 nodes.  Then, 
    \[  
-        \Pr\{d(v,w) \le 2s(h)/c  \} \le \left(\frac{e}{c}\right)^s(h) \enspace .
+        \Pr\{d(v,w) \le 2s(h)/c  \} \le \left(\frac{e}{c}\right)^{s(h)} \enspace .
    \]
 \end{lem}
 
 \begin{proof}
-   The path from $v$ to $w$ goes through a node that (before subdividing edges of $I$) had height $h$. Therefore, $d(u,w)$ is lower bounded by the sum of $2s(h)$ $\exponential(1)$ random variables.  The lemma now follows from \eqref{head-bound}.
+   The path from $v$ to $w$ goes through a node that (before subdividing
+   edges of $I$) had height $h$. Therefore, $d(u,w)$ is lower bounded
+   by the sum of $2s(h)$ $\exponential(1)$ random variables.  The lemma
+   now follows from \eqref{head-bound}.
 \end{proof}
+
+\subsection{Putting it Together}
+
+The lower-bound graph $G$ is now constructed by taking a tree $I$ with
+$L$ leaves and a graph $H$ with $L$ groups $V_1,\ldots,V_L$ each of
+size $\delta=\lfloor(\Delta-1)/2\rfloor$.  Next, we consider the leaves of $I$ in the order they are encountered in a depth first-traversal of $I$ and, for each $i\in\{1,\ldots,L\}$ we identify the $i$th leaf of $I$ with some vertex in $V_i$.  See \figref{g}.
+
+\begin{figure}
+  \begin{center}
+    \includegraphics{g}
+  \end{center}
+  \caption{The lower bound graph $G$.}
+  \figlabel{g}
+\end{figure}
+
+Note that the graph $G$ has maximum degree $\Delta=2\delta+1$.
+Furthermore, every vertex of $G$ is either in $I$, or adjacent to a
+vertex in $I$.  Therefore, the diameter of $G$ is at most two more than
+twice the height of $I$. Therefore $G$ has diameter
+\[
+   D\in O((\log\delta + \log\log L)\log L + L/\delta) = O(L/\Delta)
+\]
+for $L\in\Omega(\Delta\log\Delta\log\log\Delta)$.  That is, for any
+$\Delta$ and any $D\in\Omega(\log\Delta\log\log\Delta)$ we can construct
+a graph $G$ with diameter maximum degree $\Delta$ and diameter $D$.
+
+\begin{thm}
+  If we run Process~B on the graph $G$ defined above starting at some
+  vertex $s\in V_1$, then with probability at least $1-\exp(-cL)$,
+  the resulting spanning tree contains a path of length at least $L$.
+\end{thm}
+
+\begin{proof}
+  In the Process~FP view, we assign each edge of $G$ an $\exponential(1)$
+  edge weight and compute a shortest path tree rooted at $s$ in the
+  resulting weighted graph.  Fix $1\le i< j\le L$ and consider the two
+  vertices $v\in V_i\cap V(I)$ and $w\in V_j\cap V(I)$ that are common
+  to $H$ and $I$.
+
+  In $I$, there is a unique path $P_I$ from $v$ to $w$.  This path
+  contains at least $2s(h)$ edges, for $h=\lceil\log j-i+1 \rceil$.
+  By \lemref{slow-train}, 
+  \[
+     \Pr\{w(P_I) \le 2s(h)/c\} \le \left(\frac{e}{c}\right)^{s(h)} \enspace .
+  \]
+
+  On the other hand, \lemref{lightning} says that the minimum weight path
+  $P_H$ from $v$ to $w$ in $H$ satisfies
+  \[
+     \Pr\{w(P_H) \ge t((j-i-1)/\delta)+r\} \le \exp(-(t-1)(j-i-1)/2) + \exp(-r)
+  \]
+  Taking $r=s(h)/(2c)$ and
+  \[
+      t = \frac{\delta s(h)}{2c(j-i-1)} \enspace, 
+  \]
+  we obtain
+  \begin{align*}
+     \Pr\{w(P_H) > w(P_I)\} & \le \exp(-(t-1)(j-i-1))/2 + \exp(-r) \\
+         & \le \exp\left(-\delta s(h)/(4c) + (j-i-1)/2\right)
+                               + \exp(-s(h)/(2c)) \\
+         & \le \exp\left(-a2^h/(4c) + (j-i-1)/2\right)
+                               + \exp(-a\log L/(2c)) \\
+         & \le \exp\left(-a(j-i+1)/(4c)) + (j-i-1)/2\right)
+                               + \exp(-a\log L/(2c)) \\
+         & \le \exp\left(-a(j-i+1)/(4c)) + (j-i-1)/2\right)
+                               + \exp(-a\log L/(2c)) \\
+  \end{align*}
+ \end{proof}
 
 \end{document}
 
